2007-05-25  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* include/includes.h, include/openvas-devel.h, openvasd/sighand.c:
	Remove any consideration of NESSUSNT.

	* include/ntcompat.h: Remove any consideration of NESSUSNT and
	USE_NT_THREADS.

	* configure.in: Removed handlung for SSL presence, because
	it is now mandatory.

2007-05-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* configure.in, openvas-adduser.in, openvas-rmuser.in,
	openvas-mkcert.in, openvas-mkcert-client.in: Remove Cygwin stuff.

2007-05-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* configure: Updated.

2007-05-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* configure.in, openvas.tmpl.in, openvasd/Makefile: Replace
	use of nessus-libraries and libnasl by openvas-libraries
	and openvas-libnasl. This includes name change of the respective
	variables for the respective config scripts.

	* VERSION: Set back to 0.9.0. OpenVAS wasn't that far yet.

2007-05-09  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd-config.in, configure.in, Makefile: Removed
	DESTDIR. It looks pretty useless as it needs to
	be set in the shell. It was introduced in Nessus 1.3.1.

	* ChangeLog: New. Started ChangeLog file.