@@ -1,5 +1,15 @@
 2007-05-25  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
 
+	* include/ntcompat.h: Remove now useless emtpy defines for
+	PlugExport, DllExport, DllImport and ExtFunc. Remove
+	alias print_error for printf which was not used strictly
+	anyway.
+
+	* openvasd/log.c, openvasd/openvasd.c, openvasd/pluginload.c,
+	openvasd/preferences.c: Replaced print_error by printf.
+
+2007-05-25  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
+
 	* include/includes.h, include/openvas-devel.h, openvasd/sighand.c:
 	Remove any consideration of NESSUSNT.
 
